# bsff

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .zenodo.json  ADVERSARIAL_VALIDATION.md  ARTIFACT_EVALUATION.md  AUTHORS.md  BSFF_CASE_001_PLAN.md  CITATION.cff  CLAIMS.md  CLAIM_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE.md  DATASET_PROVENANCE.md  DECISION.md  DEMONSTRATION.md  Dockerfile  EVIDENCE_INDEX.md  FORMAL_VERDICT.md  LIMITATIONS_HARD.md  Makefile  NAVIGATION.md  NEXT_10_PR_PLAN.md  NOTICE  POSITIONING.md  PUBLIC_SHOWCASE.md  README.md  README_RESTORE_ATTEMPT_NOTE_2.md  README_RESTORE_ATTEMPT_NOTE_5.md  README_RESTORE_SENTINEL.tmp  RELEASE_CHECKLIST.md  REPRODUCE.md  REVIEWER_PACKET.md  SECURITY.md  STATISTICAL_CONTRACT.md  STATUS.md  (+13 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  repository-ruleset-main.json
LICENSES/: CC-BY-4.0.txt  GPL-3.0-or-later.txt
artifacts/: MANIFEST.json  actions_99_scorecard.json  analytic_uniformity_null.json  architecture_contract.json  benchmark_miaaft.json  bsff_phase1_validation.json  cross_validation_report.json  evidence_manifest.json  example_report.json  governance_status.json  mutation_probe.json  operating_characteristic.json  provenance_manifest.json  sbom.cdx.json  surrogate_fidelity.json  tisean_validation.csv  tisean_validation.json  tisean_validation.md  transfer_entropy_operating_characteristic.json  wheel_validation.json
benchmarks/: _bench_util.py  bench_pipeline.py  bench_schema_io.py  bench_surrogate_engine.py  conftest.py
cases/: README.md
claims/: openai_2026_allowed_claims.yml  openai_2026_forbidden_claims.yml
contracts/: bsff_contract.yaml  openai_2026_eval_contract.yaml
docs/: ACTIONS_99_SCORECARD.md  ADJUDICATION.md  ADMIN_BYPASS_WAIVER.md  ADVERSARIAL_REVIEW.md  ANTI_PLAGIARISM_PLAYBOOK.md  API_CONTRACT.md  ARCHITECTURE.md  ARTIFACT_SCHEMA.md  BIDS_APP.md  BRAND_USAGE.md  CERTIFICATE.md  CI_OBSERVABILITY.md  CLI_CONTRACT.md  CONFORMANCE.md  CONTROL_CASES.md  DATALAD_PROVENANCE.md  DATASETS.md  DATA_POLICY.md  DEVELOPMENT.md  DEVELOPMENT_CONTROL_PLANE.md  DEVELOPMENT_PACKAGE.md  EEG_ARTIFACT_BATTERY.md  FAILURE_MODES.md  FALSE_POSITIVE_CONTROL.md  FALSIFICATION_PROTOCOL.md  FINDING_N9.md  GITHUB_PUBLICATION_RUNBOOK.md  GOVERNANCE_REQUIRED_CHECKS.md  GROUNDING.md  HONESTY_AUTOMATION.md  INVALID_USE.md  INVARIANTS.md  IP_PROTECTION_MODEL.md  MANUSCRIPT.md  METHODOLOGY.md  MOABB.md  MUTATION_TESTING.md  OPENAI_2026_EVAL_CONTRACT.md  OPENAI_2026_VALIDATION_GRID.md  OPERATING_CHARACTERISTIC.md  (+29 more)
examples/: moabb_falsification.py  pipeline_smoke.py
fuzz/: fuzz_policy_profiles.py  fuzz_signal_inputs.py  fuzz_verdict_json.py
intents/: registry.json
paper/: paper.bib  paper.md  references.bib
schemas/: ci_cache_telemetry.schema.json  ci_observability_summary.schema.json  ci_step_telemetry.schema.json  ci_workflow_inventory.schema.json  openai_2026_eval.schema.json  openai_2026_verdict.schema.json  provenance_depth.schema.json
tests/: conftest.py  test_adjudication_batch.py  test_adjudication_causal.py  test_adjudication_ingest.py  test_adjudication_kernel.py  test_adversarial_gates.py  test_adversarial_operating_characteristics.py  test_analytic_uniformity_null.py  test_architecture_pipeline.py  test_artifact_schema.py  test_artifact_sha256_contract.py  test_bayes_nonfinite_hardening.py  test_bayesian_corroboration_gate.py  test_bids_ingestion.py  test_block_leakage_detector.py  test_calibration.py  test_case_001.py  test_certify.py  test_certify_binding.py  test_ci_cache_telemetry.py  test_ci_measure_step.py  test_ci_observability_aggregation.py  test_ci_workflow_inventory.py  test_claim_coverage.py  test_claim_registry.py  test_claim_safety.py  test_claimspec_schema.py  test_cli_contract.py  test_cli_operational.py  test_complexity_gate.py  test_contract_command_diagnostics.py  test_contract_conformance.py  test_contract_entrypoints.py  test_controls.py  (+87 more)
(+412 files in other folders)
