[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsff"
version = "0.4.0"
description = "Adaptive falsification-first architecture for EEG/BCI signal claims with OSS provenance, validation corpus, and development control plane"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "statsmodels>=0.14",
]

[project.scripts]
bsff = "bsff.cli:main"
bsff-validate = "bsff.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "pytest-benchmark>=4", "ruff>=0.8", "build>=1.2", "hypothesis>=6", "jsonschema>=4"]
stats = ["pingouin>=0.5.5"]
leakage = ["scikit-learn>=1.4"]
yaml = ["pyyaml>=6"]
moabb = ["moabb>=1.0", "mne>=1.6"]
# Property/fuzz gate (Hypothesis-driven; the fuzz harnesses are stdlib so the
# extra stays hermetic) and the supply-chain security audit toolchain.
fuzz = ["hypothesis>=6"]
security = ["pip-audit>=2.7"]
full = ["pingouin>=0.5.5", "scikit-learn>=1.4", "pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "slow: heavy end-to-end cascade tests (spawn many tool subprocesses); run in a dedicated CI job",
]


[tool.coverage.run]
source = ["src/bsff"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/bsff"]

# Third-party libraries that ship no type stubs. Untyped-import is a library
# gap, not a project defect, so it is silenced per-module rather than globally.
[[tool.mypy.overrides]]
module = [
    "moabb.*",
    "scipy.*",
    "sklearn.*",
    "statsmodels.*",
    "pandas_flavor.*",
    "pingouin.*",
    "mne.*",
]
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/neuron7xLab/bsff"
Repository = "https://github.com/neuron7xLab/bsff"
Issues = "https://github.com/neuron7xLab/bsff/issues"

